// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GeneratePropsCpp can generate fixture SINGLE_COMPONENT_WITH_BOOLEAN_PROP 1`] = `
Map {
  "Props.cpp" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

#include <react/components/SINGLE_COMPONENT_WITH_BOOLEAN_PROP/Props.h>
#include <react/core/propsConversions.h>

namespace facebook {
namespace react {

BooleanPropNativeComponentProps::BooleanPropNativeComponentProps(
    const BooleanPropNativeComponentProps &sourceProps,
    const RawProps &rawProps): ViewProps(sourceProps, rawProps),

    disabled(convertRawProp(rawProps, \\"disabled\\", sourceProps.disabled, disabled))
      {}

} // namespace react
} // namespace facebook
",
}
`;

exports[`GeneratePropsCpp can generate fixture SINGLE_COMPONENT_WITH_COLOR_PROP 1`] = `
Map {
  "Props.cpp" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

#include <react/components/SINGLE_COMPONENT_WITH_COLOR_PROP/Props.h>
#include <react/core/propsConversions.h>

namespace facebook {
namespace react {

ColorPropNativeComponentProps::ColorPropNativeComponentProps(
    const ColorPropNativeComponentProps &sourceProps,
    const RawProps &rawProps): ViewProps(sourceProps, rawProps),

    tintColor(convertRawProp(rawProps, \\"tintColor\\", sourceProps.tintColor, tintColor))
      {}

} // namespace react
} // namespace facebook
",
}
`;

exports[`GeneratePropsCpp can generate fixture SINGLE_COMPONENT_WITH_ENUM_PROP 1`] = `
Map {
  "Props.cpp" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

#include <react/components/SINGLE_COMPONENT_WITH_ENUM_PROP/Props.h>
#include <react/core/propsConversions.h>

namespace facebook {
namespace react {

EnumPropsNativeComponentProps::EnumPropsNativeComponentProps(
    const EnumPropsNativeComponentProps &sourceProps,
    const RawProps &rawProps): ViewProps(sourceProps, rawProps),

    alignment(convertRawProp(rawProps, \\"alignment\\", sourceProps.alignment, alignment))
      {}

} // namespace react
} // namespace facebook
",
}
`;

exports[`GeneratePropsCpp can generate fixture SINGLE_COMPONENT_WITH_EVENT_NESTED_OBJECT_PROPS 1`] = `
Map {
  "Props.cpp" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

#include <react/components/SINGLE_COMPONENT_WITH_EVENT_NESTED_OBJECT_PROPS/Props.h>
#include <react/core/propsConversions.h>

namespace facebook {
namespace react {

EventsNestedObjectNativeComponentProps::EventsNestedObjectNativeComponentProps(
    const EventsNestedObjectNativeComponentProps &sourceProps,
    const RawProps &rawProps): ViewProps(sourceProps, rawProps),

    disabled(convertRawProp(rawProps, \\"disabled\\", sourceProps.disabled, disabled))
      {}

} // namespace react
} // namespace facebook
",
}
`;

exports[`GeneratePropsCpp can generate fixture SINGLE_COMPONENT_WITH_EVENT_PROPS 1`] = `
Map {
  "Props.cpp" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

#include <react/components/SINGLE_COMPONENT_WITH_EVENT_PROPS/Props.h>
#include <react/core/propsConversions.h>

namespace facebook {
namespace react {

EventsNativeComponentProps::EventsNativeComponentProps(
    const EventsNativeComponentProps &sourceProps,
    const RawProps &rawProps): ViewProps(sourceProps, rawProps),

    disabled(convertRawProp(rawProps, \\"disabled\\", sourceProps.disabled, disabled))
      {}

} // namespace react
} // namespace facebook
",
}
`;

exports[`GeneratePropsCpp can generate fixture SINGLE_COMPONENT_WITH_FLOAT_PROPS 1`] = `
Map {
  "Props.cpp" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

#include <react/components/SINGLE_COMPONENT_WITH_FLOAT_PROPS/Props.h>
#include <react/core/propsConversions.h>

namespace facebook {
namespace react {

FloatPropNativeComponentProps::FloatPropNativeComponentProps(
    const FloatPropNativeComponentProps &sourceProps,
    const RawProps &rawProps): ViewProps(sourceProps, rawProps),

    blurRadius(convertRawProp(rawProps, \\"blurRadius\\", sourceProps.blurRadius, blurRadius)),
blurRadius2(convertRawProp(rawProps, \\"blurRadius2\\", sourceProps.blurRadius2, blurRadius2)),
blurRadius3(convertRawProp(rawProps, \\"blurRadius3\\", sourceProps.blurRadius3, blurRadius3)),
blurRadius4(convertRawProp(rawProps, \\"blurRadius4\\", sourceProps.blurRadius4, blurRadius4)),
blurRadius5(convertRawProp(rawProps, \\"blurRadius5\\", sourceProps.blurRadius5, blurRadius5))
      {}

} // namespace react
} // namespace facebook
",
}
`;

exports[`GeneratePropsCpp can generate fixture SINGLE_COMPONENT_WITH_INTEGER_PROPS 1`] = `
Map {
  "Props.cpp" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

#include <react/components/SINGLE_COMPONENT_WITH_INTEGER_PROPS/Props.h>
#include <react/core/propsConversions.h>

namespace facebook {
namespace react {

IntegerPropNativeComponentProps::IntegerPropNativeComponentProps(
    const IntegerPropNativeComponentProps &sourceProps,
    const RawProps &rawProps): ViewProps(sourceProps, rawProps),

    progress1(convertRawProp(rawProps, \\"progress1\\", sourceProps.progress1, progress1)),
progress2(convertRawProp(rawProps, \\"progress2\\", sourceProps.progress2, progress2)),
progress3(convertRawProp(rawProps, \\"progress3\\", sourceProps.progress3, progress3))
      {}

} // namespace react
} // namespace facebook
",
}
`;

exports[`GeneratePropsCpp can generate fixture SINGLE_COMPONENT_WITH_STRING_PROP 1`] = `
Map {
  "Props.cpp" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

#include <react/components/SINGLE_COMPONENT_WITH_STRING_PROP/Props.h>
#include <react/core/propsConversions.h>

namespace facebook {
namespace react {

StringPropComponentProps::StringPropComponentProps(
    const StringPropComponentProps &sourceProps,
    const RawProps &rawProps): ViewProps(sourceProps, rawProps),

    accessibilityHint(convertRawProp(rawProps, \\"accessibilityHint\\", sourceProps.accessibilityHint, accessibilityHint))
      {}

} // namespace react
} // namespace facebook
",
}
`;

exports[`GeneratePropsCpp can generate fixture TWO_COMPONENTS_DIFFERENT_FILES 1`] = `
Map {
  "Props.cpp" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

#include <react/components/TWO_COMPONENTS_DIFFERENT_FILES/Props.h>
#include <react/core/propsConversions.h>

namespace facebook {
namespace react {

MultiFile1NativeComponentProps::MultiFile1NativeComponentProps(
    const MultiFile1NativeComponentProps &sourceProps,
    const RawProps &rawProps): ViewProps(sourceProps, rawProps),

    disabled(convertRawProp(rawProps, \\"disabled\\", sourceProps.disabled, disabled))
      {}
MultiFile2NativeComponentProps::MultiFile2NativeComponentProps(
    const MultiFile2NativeComponentProps &sourceProps,
    const RawProps &rawProps): ViewProps(sourceProps, rawProps),

    disabled(convertRawProp(rawProps, \\"disabled\\", sourceProps.disabled, disabled))
      {}

} // namespace react
} // namespace facebook
",
}
`;

exports[`GeneratePropsCpp can generate fixture TWO_COMPONENTS_SAME_FILE 1`] = `
Map {
  "Props.cpp" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

#include <react/components/TWO_COMPONENTS_SAME_FILE/Props.h>
#include <react/core/propsConversions.h>

namespace facebook {
namespace react {

MultiComponent1NativeComponentProps::MultiComponent1NativeComponentProps(
    const MultiComponent1NativeComponentProps &sourceProps,
    const RawProps &rawProps): ViewProps(sourceProps, rawProps),

    disabled(convertRawProp(rawProps, \\"disabled\\", sourceProps.disabled, disabled))
      {}
MultiComponent2NativeComponentProps::MultiComponent2NativeComponentProps(
    const MultiComponent2NativeComponentProps &sourceProps,
    const RawProps &rawProps): ViewProps(sourceProps, rawProps),

    disabled(convertRawProp(rawProps, \\"disabled\\", sourceProps.disabled, disabled))
      {}

} // namespace react
} // namespace facebook
",
}
`;
